# llm-sql-auditor

./: .env.example  .gitignore  .ruff.toml  COMPLETE_FIXES_SUMMARY.md  DEPLOYMENT.md  Dockerfile  Dockerfile.prod  FIXES_SUMMARY.md  KNOWN_LIMITATIONS.md  LICENSE  Makefile  PRODUCTION_DEPLOYMENT.md  PRODUCTION_READY.md  QUICKSTART.md  README.md  VERIFICATION_CHECKLIST.md  debug_index.py  docker-compose.prod.yml  docker-compose.yml  mypy.ini  prometheus.yml  pyproject.toml  railway.json  render.yaml  requirements.txt
.github/workflows/: ci.yml
backend/: __init__.py  app.py
backend/core/: __init__.py  alerts.py  auth.py  config.py  dialects.py  error_handler.py  models.py  monitoring.py  security.py
backend/db/: __init__.py  explain_executor.py  explain_helpers.py  seed.sql
backend/scripts/: benchmark.py  demo.py
backend/services/: __init__.py  performance_validator.py  persistence.py  pipeline.py
backend/services/analyzer/: __init__.py  cost_estimator.py  index_advisor.py  parser.py  rules_engine.py
backend/services/llm/: __init__.py  cost_tracker.py  prompts.py  provider.py
backend/tests/: __init__.py  load_test.py  test_alerts.py  test_api.py  test_app.py  test_auth.py  test_bug_fixes.py  test_cost_estimator.py  test_cost_tracker.py  test_dialects.py  test_error_handler.py  test_explain_executor.py  test_explain_helpers.py  test_index_advisor.py  test_llm_provider.py  test_monitoring.py  test_performance_validation_integration.py  test_performance_validator.py  test_persistence.py  test_pipeline.py  test_pipeline_comprehensive.py  test_rules.py  test_rules_comprehensive.py  test_rules_engine.py  test_security.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx
frontend/src/components/: Badge.tsx  ExampleQueries.tsx  InputPanel.tsx  QueryCard.tsx  ReportView.tsx
grafana/dashboards/: sql-auditor.json
notebooks/: 01_prototype.ipynb
scripts/: dev_up.sh  seed_demo.sh
(+1 files in other folders)
